[package]
name = "remy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
feed-rs = "2.3.1"
ratatui = "0.29.0"
xdg = "3.0.0"
xml-rs = "1.0.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
